# Finance-Insight

./: .gitignore  README.md  StockData.py  StockDataHandler.py  UserGui.py  doc  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
src/: UserGui.py  main.py
src/Stocks/: StockDataHandler.py  TechnicalAnalysis.py
tests/: test_stock_data_handler.py
